@@ -8,8 +8,8 @@ if OS_LINUX
 # sg_scan is shared by Linux and Win32
 
 bin_PROGRAMS = \
-	sg_dd sg_emc_trespass sg_format sg_get_config sg_ident \
-	sginfo sg_inq sg_logs sg_luns sg_map26 sg_map \
+	sg_dd sg_emc_trespass sg_format sg_get_config sg_get_lba_status \
+	sg_ident sginfo sg_inq sg_logs sg_luns sg_map26 sg_map \
 	sgm_dd sg_modes sg_opcodes sgp_dd sg_persist \
 	sg_prevent sg_raw sg_rbuf sg_rdac sg_read sg_readcap \
 	sg_read_block_limits sg_read_buffer sg_read_long sg_reassign \
@@ -30,7 +30,7 @@ endif
 if OS_WIN32_MINGW
 
 bin_PROGRAMS = \
-	sg_format sg_get_config sg_ident \
+	sg_format sg_get_config sg_get_lba_status sg_ident \
 	sg_inq sg_logs sg_luns \
 	sg_modes sg_opcodes sg_persist \
 	sg_prevent sg_raw sg_rdac sg_readcap sg_read_block_limits \
@@ -52,7 +52,7 @@ endif
 if OS_WIN32_CYGWIN
 
 bin_PROGRAMS = \
-	sg_format sg_get_config sg_ident \
+	sg_format sg_get_config sg_get_lba_status sg_ident \
 	sg_inq sg_logs sg_luns \
 	sg_modes sg_opcodes sg_persist \
 	sg_prevent sg_raw sg_rdac sg_readcap sg_read_block_limits \
@@ -74,7 +74,7 @@ endif
 if OS_FREEBSD
 
 bin_PROGRAMS = \
-	sg_format sg_get_config sg_ident \
+	sg_format sg_get_config sg_get_lba_status sg_ident \
 	sg_inq sg_logs sg_luns \
 	sg_modes sg_opcodes sg_persist \
 	sg_prevent sg_raw sg_rdac sg_readcap sg_read_block_limits \
@@ -90,7 +90,7 @@ endif
 if OS_SOLARIS
 
 bin_PROGRAMS = \
-	sg_format sg_get_config sg_ident \
+	sg_format sg_get_config sg_get_lba_status sg_ident \
 	sg_inq sg_logs sg_luns \
 	sg_modes sg_opcodes sg_persist \
 	sg_prevent sg_raw sg_rdac sg_readcap sg_read_block_limits \
@@ -106,7 +106,7 @@ endif
 if OS_OSF
 
 bin_PROGRAMS = \
-	sg_format sg_get_config sg_ident \
+	sg_format sg_get_config sg_get_lba_status sg_ident \
 	sg_inq sg_logs sg_luns \
 	sg_modes sg_opcodes sg_persist \
 	sg_prevent sg_raw sg_rdac sg_readcap sg_read_block_limits \
@@ -133,6 +133,9 @@ sg_format_LDADD = ../lib/libsgutils2.la @os_libs@
 
 sg_get_config_SOURCES = sg_get_config.c
 sg_get_config_LDADD = ../lib/libsgutils2.la @os_libs@
+
+sg_get_lba_status_SOURCES = sg_get_lba_status.c
+sg_get_lba_status_LDADD = ../lib/libsgutils2.la @os_libs@
 
 sg_ident_SOURCES = sg_ident.c
 sg_ident_LDADD = ../lib/libsgutils2.la @os_libs@
