@@ -2,9 +2,10 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.28 [20090918] [svn: r299]
+Changelog for sg3_utils-1.28 [20090920] [svn: r301]
   - sg_unmap: new utility for thin provisioning
     - add examples/sg_unmap_example.txt
+  - sg_get_lba_status: new utility for thin provisioning
   - sg_read_block_limits: new utility for tape drives
   - sg_logs: add cache memory statistics log (sub)page
   - sg_vpd, sg_inq: extend Block limits VPD page (sbc3r19)
